<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Layout</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="relative_layout">RelativeLayout</string>
    <string name="linear_layout">LinearLayout</string>
    <string name="frame_layout">FrameLayout</string>
    <string name="table_layout">TableLayout</string>
    <string name="absolute_layout">AbsoluteLayout</string>
    <string name="grid_layout">GirdLayout</string>
    <string name="dynamic_layout">动态加载布局</string>
    
    <string name="title_activity_linear">LinearActivity</string>
    <string name="title_activity_frame">FrameActivity</string>
    <string name="title_activity_table">TableActivity</string>
    <string name="title_activity_relative">RelativeActivity</string>
    <string name="title_activity_absolute">AbsoluteActivity</string>
    <string name="title_activity_join">JoinActivity</string>
    <string name="title_activity_grid">GridActivity</string>
    <string name="title_activity_dynamic">DynamicActivity</string>

</resources>
